[package]
name = "my_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.2", features = ["full", "fs"]}
fastwebsockets = { version = "0.10.0", features = ["upgrade", "with_axum"] }
uuid = { version = "1.17.0", features = ["v4"] }
hyper-util = { version = "0.1.0", features = ["tokio"] }
http-body-util = { version = "0.1.0"}
hyper = { version = "1", features = [
    "http1",
    "server",
    "client",
]}
crossbeam-channel = "0.5.15"
dashmap = "5"
log = { workspace = true }
env_logger = { workspace = true }